--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,23 +1,38 @@
 version: 2.1
-executors:
-  my-custom-executor:
+jobs:
+  doing-things-job:
     docker:
       - image: cimg/base:stable
-        auth:
-          # ensure you have first added these secrets
-          # visit app.circleci.com/settings/project/github/Dargon789/1lend.io/environment-variables
-          username: $DOCKER_HUB_USER
-          password: $DOCKER_HUB_PASSWORD
-jobs:
-  my-job-name:
-
-    executor: my-custom-executor
+    parallelism: 3
     steps:
       - checkout
-      - run: |
-          # echo Hello, World!
+      - run:
+          name: "Say hello"
+          command: "echo Hello, World!"
+      - run:
+          name: "Write random data"
+          command: openssl rand -hex 4 > rand_${CIRCLE_NODE_INDEX}.txt
+      - run:
+          name: "Emulate doing things"
+          command: |
+            if [[ "$CIRCLE_NODE_INDEX" != "0" ]]; then
+              sleep 30
+            fi
+  # create a new job with the deploy step in it
+  deploy-job:
+    docker:
+      - image: cimg/base:stable
+    steps:
+      - run: # change "deploy" to "run"
+          command: |
+            echo "this is a deploy step"
 
 workflows:
-  my-custom-workflow:
+  deploy-step-workflow:
     jobs:
-      - my-job-name
+      - doing-things-job
+      # add your new job and make it depend on the
+      # "doing-things-job"
+      - deploy-job:
+          requires:
+            - doing-things-job
