--- a/smart_contracts/package.json
+++ b/smart_contracts/package.json
@@ -30,7 +30,7 @@
     "mocha": "^11.2.2",
     "openzeppelin-solidity": "^2.1.3",
     "truffle-hdwallet-provider": "1.0.5",
-    "web3": "1.0.0-beta.37",
+    "web3": "4.16.0",
     "web3-provider-engine": "git+https://github.com/cgewecke/provider-engine.git#web3-one",
     "webpack": "^5.99.8",
     "webpack-cli": "^3.1.2"
