--- a/package.json
+++ b/package.json
@@ -19,8 +19,8 @@
     "private": true,
     "dependencies": {
         "@angular/animations": "~19.1.3",
-        "@angular/common": "~19.2.16",
-        "@angular/compiler": "~19.2.17",
+        "@angular/common": "~19.1.4",
+        "@angular/compiler": "~19.1.3",
         "@angular/core": "~19.1.4",
         "@angular/forms": "~19.1.6",
         "@angular/platform-browser": "~19.2.0",
@@ -28,14 +28,14 @@
         "@angular/pwa": "^19.1.5",
         "@angular/router": "~19.1.4",
         "@angular/service-worker": "^19.1.6",
-        "@fortawesome/angular-fontawesome": "^0.4.0",
-        "@fortawesome/fontawesome-free": "^6.7.2",
+        "@fortawesome/angular-fontawesome": "^1.0.0",
+        "@fortawesome/fontawesome-free": "^5.9.0",
         "@fortawesome/fontawesome-svg-core": "^1.2.19",
-        "@fortawesome/free-brands-svg-icons": "^6.7.2",
+        "@fortawesome/free-brands-svg-icons": "^5.9.0",
         "@fortawesome/free-regular-svg-icons": "^5.9.0",
-        "@fortawesome/free-solid-svg-icons": "^6.7.2",
+        "@fortawesome/free-solid-svg-icons": "^5.9.0",
         "@ng-bootstrap/ng-bootstrap": "^18.0.0",
-        "@portis/web3": "^3.0.0",
+        "@portis/web3": "^2.0.0-beta.34",
         "@toruslabs/torus-embed": "^5.0.1",
         "@walletconnect/web3-provider": "^1.0.0-beta.32",
         "bootstrap": "^5.3.3",
@@ -54,12 +54,12 @@
         "request": "^2.88.0",
         "rxjs": "~7.8.2",
         "squarelink": "^0.4.4",
-        "tslib": "^2.8.1",
+        "tslib": "^1.10.0",
         "web3": "4.16.0",
         "zone.js": "~0.15.0"
     },
     "devDependencies": {
-        "@angular-devkit/build-angular": "~20.3.7",
+        "@angular-devkit/build-angular": "~0.801.1",
         "@angular/cli": "~8.1.2",
         "@angular/compiler-cli": "~8.1.2",
         "@angular/language-service": "~8.1.2",
